HS-907: minor clean up and add test